[FIX] horizontal title overflow on mobile floating player

--- a/widgets/audio_playlist/src/style.css
+++ b/widgets/audio_playlist/src/style.css
@@ -67,10 +67,10 @@ button {
 
 @media screen and (max-width: 450px) {
     .album-track-title {
-        max-width: 225px;
+        max-width: calc(100vw - 120px);
     }
 
     .m-track-title {
-        max-width: 180px;
+        max-width: calc(100vw - 220px);
     }
 }
